--- a/style.css
+++ b/style.css
@@ -60,3 +60,18 @@ h2{
     text-align: center;
     font-family: Lucida Handwriting;
 }
+
+.Content video, .Content iframe{
+    margin-left: 50px;
+}
+.Content a img, .Content iframe{
+    margin-top: 50px;
+    margin-bottom: 25px;
+}
+.Content video, .Content img{
+    margin-top: 25px;
+}
+video{
+    width: 50%;
+    height: 600px;
+}
